bazarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/linuxserver/bazarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /notifications
#              port: http
#            initialDelaySeconds: 60
#          readinessProbe:
#            httpGet:
#              path: /notifications
#              port: http
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tv
              name: media
              subPath: TV
            - mountPath: /tv_sync
              name: sync
              subPath: tv
            - mountPath: /movies
              name: media
              subPath: Movies
            - mountPath: /movies_sync
              name: sync
              subPath: movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media-share
