bazarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: db3000
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/component: server
  type: ClusterIP
