bazarr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: db3000
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: db3000
spec:
  ingressClassName: traefik
  rules:
  - host: bazarr.xmple.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              name: http
  tls:
  - hosts:
    - bazarr.xmple.io
    secretName: bazarr-tls
